--- a/test/fixtures/tabulations.yml
+++ b/test/fixtures/tabulations.yml
@@ -1,3 +1,17 @@
+# == Schema Information
+#
+# Table name: tabulations
+#
+#  id         :integer          not null, primary key
+#  student_id :integer
+#  gpa        :float(24)
+#  tce        :float(24)
+#  result     :string(255)
+#  remarks    :string(255)
+#  created_at :datetime         not null
+#  updated_at :datetime         not null
+#
+
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
