--- a/config/database.yml
+++ b/config/database.yml
@@ -48,7 +48,4 @@ test:
 #     url: <%= ENV['DATABASE_URL'] %>
 #
 production:
-  <<: *default
-  database: curesults-backend_production
-  username: curesults-backend
-  password: <%= ENV['curesults-BACKEND_DATABASE_PASSWORD'] %>
+  url: <%= ENV["DATABASE_URL"] %>
