--- a/test/fixtures/workforces.yml
+++ b/test/fixtures/workforces.yml
@@ -1,3 +1,17 @@
+# == Schema Information
+#
+# Table name: workforces
+#
+#  id         :integer          not null, primary key
+#  role       :string(255)      default("member")
+#  status     :integer
+#  exam_uuid  :string(255)      not null
+#  created_at :datetime         not null
+#  updated_at :datetime         not null
+#  exam_id    :integer
+#  teacher_id :integer
+#
+
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
