--- a/test/fixtures/depts.yml
+++ b/test/fixtures/depts.yml
@@ -1,3 +1,14 @@
+# == Schema Information
+#
+# Table name: depts
+#
+#  id         :integer          not null, primary key
+#  name       :string(255)
+#  created_at :datetime         not null
+#  updated_at :datetime         not null
+#  code       :string(255)
+#
+
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
