multi tennacy via registration

--- a/test/fixtures/exams.yml
+++ b/test/fixtures/exams.yml
@@ -2,15 +2,15 @@
 #
 # Table name: exams
 #
-#  id         :integer          not null, primary key
-#  sem        :integer          default("_first")
-#  year       :string(255)
-#  program    :integer          default("bsc")
-#  title      :string(255)
-#  created_at :datetime         not null
-#  updated_at :datetime         not null
-#  uuid       :string(255)
-#  fullname   :string(255)
+#  id           :integer          not null, primary key
+#  sem          :integer          default("_first")
+#  year         :string(255)
+#  program      :integer          default("bsc")
+#  title        :string(255)
+#  created_at   :datetime         not null
+#  updated_at   :datetime         not null
+#  uuid         :string(255)
+#  program_type :integer
 #
 
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
