--- a/test/fixtures/registrations.yml
+++ b/test/fixtures/registrations.yml
@@ -10,6 +10,7 @@
 #  created_at   :datetime         not null
 #  updated_at   :datetime         not null
 #  exam_uuid    :string(255)
+#  sl_no        :integer
 #
 
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
