--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,7 @@
 !/tmp/.keep
 
 .byebug_history
+/reports/*
 /reports/*.pdf 
 reports/*.aux
 reports/*.log 
@@ -26,3 +27,4 @@ reports/tabulation.synctex.gz
 .DS_Store
 reports/tabulation.synctex.gz
 .DS_Store
+reports/*.tex
