--- a/test/fixtures/summations.yml
+++ b/test/fixtures/summations.yml
@@ -21,6 +21,7 @@
 #  percetage       :float(24)
 #  cact            :float(24)
 #  exam_uuid       :string(255)
+#  record_type     :integer          default("current")
 #
 
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
