--- a/test/fixtures/tabulations.yml
+++ b/test/fixtures/tabulations.yml
@@ -2,18 +2,21 @@
 #
 # Table name: tabulations
 #
-#  id           :integer          not null, primary key
-#  student_id   :integer
-#  gpa          :float(24)
-#  tce          :float(24)
-#  result       :string(255)
-#  remarks      :string(255)
-#  created_at   :datetime         not null
-#  updated_at   :datetime         not null
-#  exam_uuid    :string(255)
-#  sl_no        :integer
-#  student_type :integer          default("regular")
-#  record_type  :integer          default("current")
+#  id             :integer          not null, primary key
+#  student_roll   :integer
+#  gpa            :float(24)
+#  tce            :float(24)
+#  result         :string(255)
+#  remarks        :string(255)
+#  created_at     :datetime         not null
+#  updated_at     :datetime         not null
+#  record_type    :integer          default("current")
+#  sl_no          :integer
+#  exam_uuid      :string(255)
+#  student_type   :integer          default("regular")
+#  hall_name      :string(255)
+#  tps            :integer          default(0)
+#  course_details :text(65535)
 #
 
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
