upgraded to rails 6 on mac m1

--- a/.gitignore
+++ b/.gitignore
@@ -26,5 +26,6 @@ reports/tabulation.pdf
 reports/tabulation.synctex.gz
 .DS_Store
 reports/tabulation.synctex.gz
-.DS_Store
+**/.DS_Store
 reports/*.tex
+app/views/.DS_Store
