--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,26 +1,48 @@
-version: '3.8' 
+version: '3.8'
 services:
+  db: 
+    image: postgres:14.1-alpine
+    restart: always
+    environment:
+        - POSTGRES_USER=postgres
+        - POSTGRES_PASSWORD=postgres 
+        - POSTGRES_HOST_AUTH_METHOD = trust
+    ports:
+      - '5432:5432'
+    volumes:
+      - db:/var/lib/postgresql/data
   web:
-   container_name: result_backend_web
    build: .
    command: bundle exec rails s -p 3000 -b '0.0.0.0'
    volumes: 
       - ".:/app"
    ports:
-     - "3000:3000" 
-   environment:
-    DB_USER: postgres
-    DB_NAME: app
-    DB_PASSWORD: postgres
-    DB_HOST: 0.0.0.0
-  worker:
-   container_name: result_backend_worker
-   build: .
-   command: rake jobs:work 
-   volumes: 
-      - ".:/app"  
+     - "3001:3000"
+   depends_on:
+     - db
+   links:
+     - db
    environment:
     DB_USER: postgres
     DB_NAME: app
     DB_PASSWORD: postgres
     DB_HOST: db
+  worker:
+   build: .
+   command: rake jobs:work
+   volumes: 
+      - ".:/app" 
+   depends_on:
+     - db
+   links:
+     - db
+   environment:
+    DB_USER: postgres
+    DB_NAME: app
+    DB_PASSWORD: postgres
+    DB_HOST: db
+
+volumes:
+    db:
+      driver: local
+
