--- a/config/database.yml
+++ b/config/database.yml
@@ -28,7 +28,7 @@ default: &default
 
 development:
   <<: *default
-  database: resultgeek-dev
+  database: <%= ENV["DB_NAME"] %>
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
