--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,9 @@ services:
       - db:/var/lib/postgresql/data
   web:
    build: .
-   command: bundle exec rails s -p 3000 -b '0.0.0.0'
+   command:
+    bundle exec rails db:prepare 
+    bundle exec rails s -p 3000 -b '0.0.0.0'
    volumes: 
       - ".:/app"
    ports:
