--- a/Dockerfile.backend
+++ b/Dockerfile.backend
@@ -9,7 +9,7 @@ ADD /resultgeek-backend/. /backend
 RUN mkdir /data
 COPY ./data/. /data/
 
-ENV RAILS_ENV=development
+ENV RAILS_ENV=production
 RUN bin/rails assets:precompile
 RUN bin/rails db:prepare
 
